workflows: Ensure there's only one queued workflow for publishing and building pipelines

--- a/.github/workflows/site-pull-request.yml
+++ b/.github/workflows/site-pull-request.yml
@@ -2,6 +2,8 @@ name: Build pull request
 
 on: pull_request
 
+concurrency: ${{ github.ref }}
+
 jobs:
   build_bot:
     if: "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
