--- a/.github/workflows/site-push-main.yml
+++ b/.github/workflows/site-push-main.yml
@@ -14,9 +14,6 @@ jobs:
     env:
       TZ: "Europe/Paris"
       LANG: "fr_FR.UTF-8"
-    defaults:
-      run:
-        working-directory: site
     steps:
       - uses: actions/checkout@v3
       - run: |
@@ -25,9 +22,8 @@ jobs:
           echo "GOOGLE_APPLICATION_CREDENTIALS=$GOOGLE_APPLICATION_CREDENTIALS" >> $GITHUB_ENV
           echo "GCLOUD_PROJECT=${{ secrets.FIREBASE_PROJECT_ID }}" >> $GITHUB_ENV
       - run: npm ci && npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
-          projectId: "${{ secrets.FIREBASE_PROJECT_ID }}"
-          channelId: live
+        working-directory: site
+      - run: |
+          npx -q firebase-tools use ${{ secrets.FIREBASE_PROJECT_ID }}
+          npx -q firebase-tools target:apply hosting site ${{ secrets.FIREBASE_SITE_ID }}
+          npx -q firebase-tools deploy --only hosting:site
