--- a/.github/workflows/site-push-main.yml
+++ b/.github/workflows/site-push-main.yml
@@ -21,6 +21,11 @@ jobs:
           echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > "$GOOGLE_APPLICATION_CREDENTIALS"
           echo "GOOGLE_APPLICATION_CREDENTIALS=$GOOGLE_APPLICATION_CREDENTIALS" >> $GITHUB_ENV
           echo "GCLOUD_PROJECT=${{ secrets.FIREBASE_PROJECT_ID }}" >> $GITHUB_ENV
+      - uses: actions/setup-node@v3
+        with:
+          cache: "npm"
+          cache-dependency-path: |
+            site/package-lock.json
       - run: npm ci && npm run build
         working-directory: site
       - run: |
