--- a/firebase.json
+++ b/firebase.json
@@ -3,5 +3,13 @@
     "target": "site",
     "public": "site/build",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+  },
+  "emulators": {
+    "firestore": {
+      "port": 8080
+    },
+    "ui": {
+      "enabled": true
+    }
   }
 }
