--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,53 @@
-.DS_Store
+# Environments
+.env
+.env.*
+.local
 
+# Dependency directories
+node_modules/
+
+# Firebase
+.data/
+.firebase/
+.firebaserc
+
+# https://raw.githubusercontent.com/github/gitignore/main/Node.gitignore
+# Logs
+logs
+*.log
+
+######
+# ref: https://raw.githubusercontent.com/github/gitignore/main/Global/macOS.gitignore
+
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+######
+# ref: https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -13,12 +61,3 @@
 
 # Built Visual Studio Code Extensions
 *.vsix
-
-# Ignore local and env files
-.env
-.env.*
-.local
-
-# Ignore firebase files
-.firebase
-.firebaserc
