--- a/bot/.gitignore
+++ b/bot/.gitignore
@@ -1,3 +1,6 @@
+######
+# ref: https://raw.githubusercontent.com/github/gitignore/main/Python.gitignore
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
