--- a/firebase.json
+++ b/firebase.json
@@ -4,6 +4,16 @@
     "public": "site/build",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   },
+  "functions": {
+    "ignore": [
+      "node_modules",
+      ".git",
+      "firebase-debug.log",
+      "firebase-debug.*.log"
+    ],
+    "source": "functions",
+    "runtime": "nodejs16"
+  },
   "emulators": {
     "firestore": {
       "port": 8080
