--- a/tools/package.json
+++ b/tools/package.json
@@ -7,15 +7,19 @@
     "check": "tsc --noEmit",
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
-    "seed:events": "tsc --build && node dist/seed-events.js"
+    "seed:events": "tsc --build && node dist/seed-events.js",
+    "catchup": "tsc --build && node dist/catch-up.js"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
     "@tsconfig/node16-strictest": "^1.0.3",
+    "@types/luxon": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "dotenv": "^16.0.2",
     "eslint": "^8.23.0",
+    "luxon": "^3.0.3",
+    "node-fetch": "^2.6.7",
     "prettier": "^2.7.1",
     "typescript": "^4.8.2"
   }
