--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "npm-run-all": "^4.1.5"
   },
   "resolutions": {
-    "got": "^11.8.5"
+    "got": "^11.8.5",
+    "@types/responselike": "1.0.0"
   },
   "workspaces": [
     "site",
