adapt css with Bulma

--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "site",
     "functions",
     "tools"
-  ]
+  ],
+  "dependencies": {
+    "bulma": "^0.9.4",
+    "eslint": "^8.23.0"
+  }
 }
