--- a/site/package.json
+++ b/site/package.json
@@ -30,6 +30,8 @@
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
     "typescript": "^4.8.2",
-    "vite": "^3.1.0-beta.1"
+    "vite": "^3.1.0-beta.1",
+    "sass": "^1.53.0",
+    "bulma": "^0.9.4"
   }
 }
