--- a/.github/workflows/functions.yml
+++ b/.github/workflows/functions.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           cache: "yarn"
           cache-dependency-path: yarn.lock
+          node-version: 16
       - run: |
           yarn install --frozen-lockfile
           yarn workspace functions run build
