--- a/functions/package.json
+++ b/functions/package.json
@@ -2,6 +2,7 @@
   "name": "functions",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "scripts": {
@@ -17,17 +18,17 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "^11.0.1",
-    "firebase-functions": "^3.18.0",
-    "node-fetch": "^2.6.7"
+    "firebase-admin": "^11.4.1",
+    "firebase-functions": "^4.1.1",
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
-    "@types/node-fetch": "^2.6.2",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.35.1",
-    "eslint": "^8.23.0",
+    "@types/node": "^16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
-    "firebase-functions-test": "^0.2.0",
-    "typescript": "^4.8.2"
+    "firebase-functions-test": "^3.0.0",
+    "typescript": "^4.9.4"
   }
 }
