--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "homepage": "https://github.com/KuSh/Twitch-SA-Leaderboard#readme",
   "bugs": "https://github.com/KuSh/Twitch-SA-Leaderboard/issues",
   "engines": {
-    "node": "^16",
+    "node": "^16.11.0",
     "yarn": "^1.22.17"
   },
   "scripts": {
@@ -17,18 +17,18 @@
     "start:functions": "yarn workspace functions run start",
     "start:site": "yarn workspace site run start",
     "start": "npm-run-all --parallel start:**",
+    "build": "yarn workspaces run build",
     "check": "yarn workspaces run check",
-    "lint": "yarn workspaces run lint",
     "format": "yarn workspaces run format",
-    "build": "yarn workspaces run build"
+    "lint": "yarn workspaces run lint"
   },
   "devDependencies": {
-    "firebase-tools": "^11.8.0",
+    "firebase-tools": "^11.19.0",
     "npm-run-all": "^4.1.5"
   },
   "resolutions": {
     "got": "^11.8.5",
-    "@types/responselike": "1.0.0"
+    "jsonwebtoken": "^9.0.0"
   },
   "workspaces": [
     "site",
