--- a/tools/package.json
+++ b/tools/package.json
@@ -11,17 +11,17 @@
     "catchup": "tsc --build && node dist/catch-up.js"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.5.0",
-    "@tsconfig/node16-strictest": "^1.0.3",
-    "@types/luxon": "^3.0.0",
-    "@types/node-fetch": "^2.6.2",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "dotenv": "^16.0.2",
-    "eslint": "^8.23.0",
-    "luxon": "^3.0.3",
-    "node-fetch": "^2.6.7",
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.2"
+    "@faker-js/faker": "^7.6.0",
+    "@tsconfig/node16-strictest-esm": "^1.0.3",
+    "@types/luxon": "^3.1.0",
+    "@types/node": "^16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.30.0",
+    "luxon": "^3.1.1",
+    "node-fetch": "^3.3.0",
+    "prettier": "^2.8.1",
+    "typescript": "^4.9.4"
   }
 }
