--- a/site/package.json
+++ b/site/package.json
@@ -30,6 +30,10 @@
     "svelte-preprocess": "^5.0.0",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "postcss": "^8.4.14",
+    "postcss-load-config": "^4.0.1",
+    "autoprefixer": "^10.4.7",
+    "tailwindcss": "^3.1.5"
   }
 }
