--- a/functions/package.json
+++ b/functions/package.json
@@ -23,12 +23,13 @@
     "node-fetch": "^3.3.0"
   },
   "devDependencies": {
-    "@types/node": "^16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
-    "eslint": "^8.31.0",
+    "@types/node": "^16.18.12",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "firebase-functions-test": "^3.0.0",
-    "typescript": "^4.9.4"
+    "prettier": "^2.8.3",
+    "typescript": "^4.9.5"
   }
 }
