--- a/functions/package.json
+++ b/functions/package.json
@@ -23,6 +23,7 @@
     "node-fetch": "^3.3.0"
   },
   "devDependencies": {
+    "@tsconfig/node18-strictest-esm": "^1.0.1",
     "@types/node": "^18.14.0",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
