--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -1,14 +1,31 @@
 {
   "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
+    // Type Checking
+    "strict": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "exactOptionalPropertyTypes": true,
+    "importsNotUsedAsValues": "error",
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    // Modules
+    "resolveJsonModule": true,
+    // Emit
+    "sourceMap": true,
+    // JavaScript Support
     "allowJs": true,
     "checkJs": true,
+    // Interop Constraints
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strict": true
+    // Completeness
+    "skipLibCheck": true
   }
   // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
   //
