--- a/tools/package.json
+++ b/tools/package.json
@@ -7,22 +7,23 @@
   "scripts": {
     "check": "tsc --noEmit",
     "lint": "prettier --check . && eslint .",
-    "format": "prettier --write .",
+    "format": "prettxier --write .",
     "seed:events": "tsc --build && node dist/seed-events.js",
-    "catchup": "tsc --build && node dist/catch-up.js"
+    "catchup": "tsc --build && node dist/catch-up.js",
+    "rewrite": "tsc --build && node dist/rewrite.js"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@tsconfig/node18-strictest-esm": "^1.0.1",
-    "@types/luxon": "^3.2.0",
-    "@types/node": "^18.15.5",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@types/luxon": "^3.3.0",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "dotenv": "^16.0.3",
-    "eslint": "^8.36.0",
+    "eslint": "^8.37.0",
     "luxon": "^3.3.0",
     "node-fetch": "^3.3.1",
-    "prettier": "^2.8.6",
-    "typescript": "^5.0.2"
+    "prettier": "^2.8.7",
+    "typescript": "^5.0.3"
   }
 }
