--- a/tools/package.json
+++ b/tools/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "license": "Apache-2.0",
   "scripts": {
+    "build": "tsc",
     "check": "tsc --noEmit",
     "lint": "prettier --check . && eslint .",
     "format": "prettxier --write .",
@@ -17,13 +18,13 @@
     "@tsconfig/node18-strictest-esm": "^1.0.1",
     "@types/luxon": "^3.3.0",
     "@types/node": "^18.15.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "dotenv": "^16.0.3",
-    "eslint": "^8.37.0",
+    "eslint": "^8.38.0",
     "luxon": "^3.3.0",
     "node-fetch": "^3.3.1",
     "prettier": "^2.8.7",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.4"
   }
 }
