--- a/functions/package.json
+++ b/functions/package.json
@@ -18,16 +18,18 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "^11.7.0",
-    "firebase-functions": "^4.3.1",
+    "firebase-admin": "^11.8.0",
+    "firebase-functions": "^4.4.0",
     "node-fetch": "^3.3.1"
   },
   "devDependencies": {
-    "@tsconfig/node18-strictest-esm": "^1.0.1",
-    "@types/node": "^18.16.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "eslint": "^8.39.0",
+    "@tsconfig/esm": "^1.0.3",
+    "@tsconfig/node18": "^2.0.1",
+    "@tsconfig/strictest": "^2.0.1",
+    "@types/node": "^18.16.13",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
+    "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.8",
     "typescript": "^5.0.4"
