--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,5 +1,9 @@
 {
-  "extends": "@tsconfig/node18-strictest-esm/tsconfig.json",
+  "extends": [
+    "@tsconfig/node18/tsconfig",
+    "@tsconfig/strictest/tsconfig",
+    "@tsconfig/esm"
+  ],
   "compilerOptions": {
     "lib": ["es2022"],
     "module": "es2022",
