--- a/tools/package.json
+++ b/tools/package.json
@@ -14,14 +14,15 @@
     "rewrite": "tsc --build && node dist/rewrite.js"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.6.0",
-    "@tsconfig/node18-strictest-esm": "^1.0.1",
+    "@faker-js/faker": "^8.0.1",
+    "@tsconfig/esm": "^1.0.3",
+    "@tsconfig/strictest": "^2.0.1",
     "@types/luxon": "^3.3.0",
-    "@types/node": "^18.16.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@types/node": "^18.16.13",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "dotenv": "^16.0.3",
-    "eslint": "^8.39.0",
+    "eslint": "^8.40.0",
     "luxon": "^3.3.0",
     "node-fetch": "^3.3.1",
     "prettier": "^2.8.8",
