--- a/tools/tsconfig.json
+++ b/tools/tsconfig.json
@@ -1,5 +1,9 @@
 {
-  "extends": "@tsconfig/node18-strictest-esm/tsconfig.json",
+  "extends": [
+    "@tsconfig/node18/tsconfig",
+    "@tsconfig/strictest/tsconfig",
+    "@tsconfig/esm"
+  ],
   "compilerOptions": {
     "outDir": "dist",
     // Override deprecated option
