--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "firebase-tools": "^12.4.3",
     "npm-run-all": "^4.1.5"
   },
+  "resolutions": {
+    "word-wrap": "npm:@aashutoshrathi/word-wrap@^1.2.3"
+  },
   "workspaces": [
     "site",
     "functions",
