--- a/site/package.json
+++ b/site/package.json
@@ -22,7 +22,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint-plugin-svelte": "^2.33.1",
     "luxon": "^3.3.0",
     "postcss": "^8.4.27",
     "postcss-load-config": "^4.0.1",
