chore: Remove unused deprecated tsconfig option

--- a/tools/tsconfig.json
+++ b/tools/tsconfig.json
@@ -5,8 +5,6 @@
     "@tsconfig/esm"
   ],
   "compilerOptions": {
-    "outDir": "dist",
-    // Override deprecated option
-    "importsNotUsedAsValues": null
+    "outDir": "dist"
   }
 }
