--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -9,9 +9,7 @@
     "module": "es2022",
     "target": "es2022",
     "sourceMap": true,
-    "outDir": "lib",
-    // Override deprecated option
-    "importsNotUsedAsValues": null
+    "outDir": "lib"
   },
   "compileOnSave": true,
   "include": ["src", "global.d.ts"]
