fix: tsconfig extends option

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": [
-    "@tsconfig/node18/tsconfig",
-    "@tsconfig/strictest/tsconfig",
-    "@tsconfig/esm"
+    "@tsconfig/node18/tsconfig.json",
+    "@tsconfig/strictest/tsconfig.json",
+    "@tsconfig/esm/tsconfig.json"
   ],
   "compilerOptions": {
     "lib": ["es2022"],
