--- a/site/package.json
+++ b/site/package.json
@@ -8,6 +8,7 @@
     "build": "svelte-kit sync && vite build",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "clean": "node -e \"fs.rmSync('.svelte-kit', {force:true,recursive:true}); fs.rmSync('build', {force:true,recursive:true})\"",
     "format": "prettier --write .",
     "lint": "prettier --check . && eslint .",
     "preview": "vite preview",
@@ -23,6 +24,7 @@
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-svelte": "^2.33.2",
+    "firebase-admin": "^11.11.0",
     "luxon": "^3.4.3",
     "postcss": "^8.4.31",
     "postcss-load-config": "^4.0.1",
