--- a/functions/package.json
+++ b/functions/package.json
@@ -6,31 +6,36 @@
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "scripts": {
-    "lint": "prettier --check . && eslint .",
-    "check": "tsc --noEmit",
-    "format": "prettier --write .",
-    "build": "tsc",
     "build:watch": "tsc --watch",
-    "serve": "yarn run build && firebase emulators:start --only functions",
-    "shell": "yarn run build && firebase functions:shell",
-    "start": "yarn run shell",
+    "build": "tsc",
+    "check": "tsc --noEmit",
+    "clean": "node -e \"fs.rmSync('lib', {force:true,recursive:true})\"",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "emulator": "firebase emulators:start --only functions",
+    "format": "prettier --write .",
+    "lint": "prettier --check . && eslint .",
+    "logs": "firebase functions:log",
+    "serve": "npm-run-all build --parallel build:watch emulator",
+    "shell": "firebase functions:shell",
+    "start": "npm-run-all build --parallel build:watch shell"
   },
   "dependencies": {
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.4.1",
+    "luxon": "^3.4.3",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@tsconfig/esm": "^1.0.4",
     "@tsconfig/node18": "^18.2.2",
     "@tsconfig/strictest": "^2.0.2",
+    "@types/luxon": "^3.3.2",
     "@types/node": "^18.18.1",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   }
