--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -12,5 +12,6 @@
     "outDir": "lib"
   },
   "compileOnSave": true,
-  "include": ["src", "global.d.ts"]
+  "include": ["src", "global.d.ts"],
+  "exclude": ["node_modules", "lib"]
 }
