--- a/package.json
+++ b/package.json
@@ -13,22 +13,25 @@
     "yarn": "^1.22.17"
   },
   "scripts": {
-    "start:emulators": "firebase emulators:start --only firestore --import .data --export-on-exit",
-    "start:functions": "yarn workspace functions run start",
-    "start:site": "yarn workspace site run start",
-    "start": "npm-run-all --parallel start:**",
     "build": "yarn workspaces run build",
     "check": "yarn workspaces run check",
+    "clean": "yarn workspaces run clean",
     "format": "yarn workspaces run format",
-    "lint": "yarn workspaces run lint"
+    "lint": "yarn workspaces run lint",
+    "start:emulators": "firebase emulators:start --only firestore,functions --import .data --export-on-exit",
+    "start:functions": "yarn workspace functions run start",
+    "start:site": "yarn workspace site run start",
+    "start": "npm-run-all --parallel start:**"
   },
   "devDependencies": {
     "firebase-tools": "^12.6.1",
     "npm-run-all": "^4.1.5"
   },
-  "workspaces": [
-    "site",
-    "functions",
-    "tools"
-  ]
+  "workspaces": {
+    "packages": [
+      "functions",
+      "site",
+      "tools"
+    ]
+  }
 }
