--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,17 +1,12 @@
 {
   "extends": [
     "@tsconfig/node18/tsconfig.json",
-    "@tsconfig/strictest/tsconfig.json",
-    "@tsconfig/esm/tsconfig.json"
+    "@tsconfig/strictest/tsconfig.json"
   ],
   "compilerOptions": {
-    "lib": ["es2022"],
-    "module": "es2022",
-    "target": "es2022",
     "sourceMap": true,
     "outDir": "lib"
   },
-  "compileOnSave": true,
   "include": ["src", "global.d.ts"],
   "exclude": ["node_modules", "lib"]
 }
