--- a/tools/tsconfig.json
+++ b/tools/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": [
     "@tsconfig/node18/tsconfig.json",
-    "@tsconfig/strictest/tsconfig.json",
-    "@tsconfig/esm/tsconfig.json"
+    "@tsconfig/strictest/tsconfig.json"
   ],
   "compilerOptions": {
     "outDir": "dist"
