--- a/.github/workflows/functions.yml
+++ b/.github/workflows/functions.yml
@@ -17,12 +17,12 @@ jobs:
           echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > "$GOOGLE_APPLICATION_CREDENTIALS"
           echo "GOOGLE_APPLICATION_CREDENTIALS=$GOOGLE_APPLICATION_CREDENTIALS" >> $GITHUB_ENV
           echo "GCLOUD_PROJECT=${{ secrets.FIREBASE_PROJECT_ID }}" >> $GITHUB_ENV
-      - uses: pnpm/action-setup@v3
+      - uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: ^9.3.0
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: ^18.13.0
           cache: "pnpm"
       - run: |
           pnpm install --frozen-lockfile
