--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -29,12 +29,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v3
+      - uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: ^9.3.0
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: ^18.13.0
           cache: "pnpm"
       - run: |
           pnpm install --frozen-lockfile
