--- a/site/package.json
+++ b/site/package.json
@@ -15,17 +15,19 @@
     "start": "vite dev"
   },
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
     "@sveltejs/adapter-static": "^3.0.4",
     "@sveltejs/kit": "^2.5.27",
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@types/eslint-config-prettier": "^6.11.3",
+    "@types/eslint__js": "^8.42.3",
     "@types/luxon": "^3.4.2",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
+    "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.44.0",
     "firebase-admin": "^12.5.0",
+    "globals": "^15.9.0",
     "luxon": "^3.5.0",
     "postcss": "^8.4.46",
     "postcss-load-config": "^6.0.1",
@@ -37,6 +39,7 @@
     "tailwindcss": "^3.4.11",
     "tslib": "^2.7.0",
     "typescript": "^5.6.2",
+    "typescript-eslint": "^8.5.0",
     "vite": "^5.4.5"
   }
 }
