--- a/tools/package.json
+++ b/tools/package.json
@@ -16,20 +16,21 @@
     "rewrite": "tsc && node dist/rewrite.js"
   },
   "dependencies": {
-    "@faker-js/faker": "^8.4.1",
+    "@faker-js/faker": "^9.0.0",
     "dotenv": "^16.4.5",
-    "firebase-admin": "^12.1.1",
-    "luxon": "^3.4.4",
+    "firebase-admin": "^12.5.0",
+    "luxon": "^3.5.0",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@tsconfig/node18": "^18.2.4",
     "@tsconfig/strictest": "^2.0.5",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^18.19.33",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "@typescript-eslint/parser": "^7.13.0",
+    "@types/node": "^18.19.50",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.0",
-    "prettier": "^3.3.2",
-    "typescript": "^5.4.5"
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.2"
   }
 }
