--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@sveltejs/adapter-static": "^3.0.6",
+    "@sveltejs/enhanced-img": "^0.4.1",
     "@sveltejs/kit": "^2.8.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@types/eslint-config-prettier": "^6.11.3",
