--- a/site/package.json
+++ b/site/package.json
@@ -20,6 +20,7 @@
     "@sveltejs/enhanced-img": "^0.4.1",
     "@sveltejs/kit": "^2.8.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@swc/html": "^1.9.2",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
     "@types/luxon": "^3.4.2",
