--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -25,13 +25,13 @@ jobs:
           echo "GCLOUD_PROJECT=${{ secrets.FIREBASE_PROJECT_ID }}" >> $GITHUB_ENV
       - uses: pnpm/action-setup@v4
         with:
-          version: ^9.3.0
+          version: ^10.14.0
       - uses: actions/setup-node@v4
         with:
-          node-version: ^20.17.0
+          node-version: ^22.18.0
           cache: "pnpm"
       - run: |
-          pnpm install --frozen-lockfile
+          pnpm --filter ...site install --frozen-lockfile
           pnpm --filter site build
           pnpm exec firebase use ${{ secrets.FIREBASE_PROJECT_ID }}
           pnpm exec firebase target:apply hosting site ${{ secrets.FIREBASE_SITE_ID }}
