--- a/site/package.json
+++ b/site/package.json
@@ -15,32 +15,29 @@
     "start": "vite dev"
   },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/enhanced-img": "^0.4.4",
-    "@sveltejs/kit": "^2.16.1",
-    "@sveltejs/vite-plugin-svelte": "^4.0.4",
-    "@swc/html": "^1.10.12",
+    "@eslint/js": "^9.33.0",
+    "@sveltejs/adapter-static": "^3.0.9",
+    "@sveltejs/enhanced-img": "^0.8.0",
+    "@sveltejs/kit": "^2.31.1",
+    "@sveltejs/vite-plugin-svelte": "^6.1.2",
+    "@swc/html": "^1.13.3",
+    "@tailwindcss/vite": "^4.1.12",
     "@types/eslint-config-prettier": "^6.11.3",
-    "@types/eslint__js": "^8.42.3",
-    "@types/luxon": "^3.4.2",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.19.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.46.1",
-    "firebase-admin": "^12.7.0",
-    "globals": "^15.14.0",
-    "luxon": "^3.5.0",
-    "postcss": "^8.5.1",
-    "postcss-load-config": "^6.0.1",
-    "prettier": "^3.4.2",
-    "prettier-plugin-svelte": "^3.3.3",
-    "svelte": "^5.19.6",
-    "svelte-check": "^4.1.4",
-    "tailwindcss": "^3.4.17",
+    "@types/luxon": "^3.7.1",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-svelte": "^3.11.0",
+    "firebase-admin": "^13.4.0",
+    "globals": "^16.3.0",
+    "luxon": "^3.7.1",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "svelte": "^5.38.1",
+    "svelte-check": "^4.3.1",
+    "tailwindcss": "^4.1.12",
     "tslib": "^2.8.1",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.22.0",
-    "vite": "^5.4.14"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.39.1",
+    "vite": "^7.1.2"
   }
 }
