chore(functions): Don't include eslint config file in deployment

--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,7 @@
       "ignore": [
         ".*",
         "*.log",
+        "eslint.config.js",
         "global.d.ts",
         "node_modules",
         "src",
