--- a/.github/workflows/functions.yml
+++ b/.github/workflows/functions.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
     paths: ["functions/**"]
 
-concurrency: ${{ github.ref }}
+concurrency: ${{ github.ref }}-functions
 
 jobs:
   build_and_deploy:
