--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -6,7 +6,7 @@ on:
     paths: ["site/**"]
   workflow_dispatch:
 
-concurrency: ${{ github.ref }}
+concurrency: ${{ github.ref }}-site
 
 jobs:
   build_and_deploy:
